# loci

./: .gitignore  .prototools  AGENTS.md  CHALLENGE_APPLICATION.md  Justfile  LICENSE  LICENSE-EXECUTABLE.md  LICENSE.mbt.md  README.mbt.md  README.md  distrobox.ini  genius_test.mbt  merkin_test.mbt  moon.mod.json  moon.work  pkg.generated.mbti  scan_report.json
.Jules/: palette.md
.jules/: bolt.md  palette.md
.loci/: config.json
.well-known/: boundary-shim.json  interface-drift-policy.md  mu-interface.json  procsi-sections.json  sat-smt-offload-status.json  sat-smt-offload.json  triad-contract.json
api/: api.mbt  api_test.mbt  moon.pkg  pkg.generated.mbti
bloom/: bloom.mbt  bloom_test.mbt  pkg.generated.mbti
cli/: package.json  pnpm-lock.yaml  tsconfig.json
conformance/: conformance.mbt  conformance_bench_test.mbt  core_profile_test.mbt  moon.pkg  optional_profiles_test.mbt  pkg.generated.mbti
daemon/: codecave.mbt  codecave_test.mbt  conversation.mbt  conversation_test.mbt  daemon.mbt  daemon_test.mbt  moon.pkg  pkg.generated.mbti
docs/: BUILD_MATRIX.json  (+59 more)
tmp/tena/tena-substrate/: Cargo.toml  README.md
tmp/tena/tena-substrate/examples/: compile_semanticfile.rs
tmp/tena/tena-substrate/src/: attention.rs  lib.rs
tmp/tena/tena-substrate/src/heat/: mod.rs
tmp/tena/tena-substrate/src/ingest/: mod.rs
tmp/tena/tena-substrate/src/node/: mod.rs
tmp/tena/tena-substrate/src/query/: mod.rs
tmp/tena/tena-substrate/src/scheduler/: mod.rs
tmp/tena/tena-substrate/src/sll/: intent.rs  mod.rs  parser.rs
tmp/tena/tena-substrate/src/smt/: mod.rs
(+688 files in other folders)
